--- a/paper/paper_PE.tex
+++ b/paper/paper_PE.tex
@@ -88,7 +88,7 @@
 
 \begin{abstract}
 
-The space-based gravitational wave detector LISA will observe mergers of supermassive black hole binary systems (SMBHBs) to cosmological distances, as well as inspiralling stellar-origin (or stellar-mass) binaries (SBHBs) years before they enter the LIGO/Virgo band. Much remains to be explored for the parameter recovery of both class of systems. Previous SMBHB analyses relied on inspiral-only signals and/or a simplified Fisher matrix analysis, while SBHBs have not yet been analyzed with Bayesian methods. We accelerate likelihood computations by (i) using a Fourier-domain response of the LISA instrument, (ii) using a reduced-order model for non-spinning waveforms that include a merger-ringdown and higher harmonics, (iii) setting the noise realization to zero and computing overlaps in the amplitude/phase representation. We present the first simulations of Bayesian inference for the parameters of supermassive black hole systems including consistently the merger and ringdown of the signal, as well as higher harmonics. We find that restricting the merger-dominated signal to its dominant harmonic can make the extrinsic likelihood very degenerate. Including higher harmonics proves to be crucial to break degeneracies and considerably improves the localization of the source, with a surviving bimodality in the sky position. We also present simulations of Bayesian inference for the extrinsic parameters of SBHBs, and show that although unimodal, their posterior distributions can have non-Gaussian features.
+The space-based gravitational wave detector LISA will observe mergers of supermassive black hole binary systems (SMBHBs) to cosmological distances, as well as inspiralling stellar-origin (or stellar-mass) binaries (SBHBs) years before they enter the LIGO/Virgo band. Much remains to be explored for the parameter recovery of both class of systems. Previous SMBHB analyses relied on inspiral-only signals and/or a simplified Fisher matrix analysis, while SBHBs have not yet been analyzed with Bayesian methods.  We present the first simulations of Bayesian inference for the parameters of supermassive black hole systems including consistently the merger and ringdown of the signal, as well as higher harmonics. We use an instrumental response that includes finite-armlength effects at high frequencies, but we ignore the spin degrees of freedom and set the noise realization to zero. We find that restricting the merger-dominated signal to its dominant harmonic can make the extrinsic likelihood very degenerate. Including higher harmonics proves to be crucial to break degeneracies and considerably improves the localization of the source, with a surviving bimodality in the sky position. We explore the pre-merger parameter recovery by cutting the signals at different times before merger, and find a degenerate structure with eight modes in the sky reducing to two modes only shortly before merger. We analyze the respective roles of the time- and frequency-dependence of the LISA response in breaking degeneracies, and find that finite-armlength effects prove crucial in eliminating six of the eight modes in the sky, while the effect of the LISA motion is limited for our short-lived example signals. We also present simulations of Bayesian inference for the extrinsic parameters of SBHBs, and show that although unimodal, their posterior distributions can have non-Gaussian features.
 
 \end{abstract}
 
